package Banco;

import Carta.Desarrollo.Desarrollo;
import Carta.Recurso.Recurso;

public class Banco {

    private Desarrollo[][] desarrollos;
    private Recurso[][] recursos;

}
