package Carta.Desarrollo;

public class Caballero extends Desarrollo{
}
