package Carta.Desarrollo;

import Carta.Carta;

public class Desarrollo extends Carta {
}
