package Carta.Desarrollo;

public class Monopolio extends Desarrollo{
}
