package Catan;

import Banco.Banco;
import Dados.Dados;
import Jugador.Jugador;
import Ladron.Ladron;
import Tablero.Tablero;

public class Catan {

    private Banco banco;
    private Jugador[] jugadores;
    private Tablero tablero;
    private Dados dados;
    private Ladron ladron;

}
