package Jugador;

import Carta.Desarrollo.Desarrollo;
import Carta.Recurso.Recurso;

public class Jugador {

    private String nombre;
    private Desarrollo[] desarrollo;
    private Recurso[] recursos;
}
