package Tablero.Estructura;

import Jugador.Jugador;

public class Ciudad extends Estructura{
    public Ciudad(Jugador jugador) {
        super(jugador);
    }
}
