package Tablero.Estructura;

import Jugador.Jugador;

public class Poblado extends Estructura {

    public Poblado(Jugador jugador) {
        super(jugador);
    }
}
