package Tablero;

public class Vertice {

    private Estructura estructura;

    public Vertice() {
        this.estructura = null;
    }

}
