package Terreno;

public class Desierto extends Terreno{
}
